fix overflow details

--- a/style.css
+++ b/style.css
@@ -408,6 +408,7 @@ body {
         background-color: rgba(0, 0, 0, 0.5);
         background-size: cover;
         margin-left: 50px;
+        overflow: auto;
 
         & h1 {
           margin-bottom: 50px;
@@ -420,6 +421,7 @@ body {
           margin-top: 100px;
           padding: 30px;
           font-weight: 300;
+
         }
 
       }
